--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Pagination/UmbrellaPagination.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Pagination/UmbrellaPagination.razor
@@ -1,7 +1,6 @@
 ﻿@if (Model.TotalCount > 0)
 {
     string paginationSizeButtonId = "a" + Guid.NewGuid().ToString("N")[1..];
-    string paginationSizeDropdownId = "a" + Guid.NewGuid().ToString("N")[1..];
 
 	<nav class="u-pagination" aria-label="table navigation">
 		<ul class="pagination @(SmallPagination ? "pagination-sm" : "")">
@@ -39,8 +38,8 @@
 			}
 		</ul>
 		<div class="pagination-size">
-			<div id="@paginationSizeDropdownId" class="dropdown" aria-role="menu">
-                <a class="btn @(SmallPagination ? "btn-sm" : "") btn-primary dropdown-toggle" href="#" role="button" id="@paginationSizeButtonId" data-bs-toggle="#@paginationSizeDropdownId" aria-haspopup="true" aria-expanded="false">
+			<div class="dropdown" aria-role="menu">
+                <a class="btn @(SmallPagination ? "btn-sm" : "") btn-primary dropdown-toggle" href="#" role="button" id="@paginationSizeButtonId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					@PageSize
 				</a>
                 <div class="dropdown-menu" aria-labelledby="@paginationSizeButtonId">
