Fixes Updated version to 6.0.0-preview-0045

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -98,7 +98,7 @@
                             {
                                 <col class="u-grid__column" />
                             }
-                            @foreach (var column in ColumnDefinitions)
+                            @foreach (var column in ColumnDefinitions.Where(x => x.DisplayMode is UmbrellaColumnDisplayMode.Full))
                             {
                                 <col class="u-grid__column @(column.ColumnWidthCssClass)" @attributes="column.AdditionalAttributes" />
                             }
