--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Content/styles/components/index.scss
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Content/styles/components/index.scss
@@ -1,5 +1,6 @@
 ﻿@import "checkbox.scss";
 @import "dialog.scss";
+@import "file-upload.scss";
 @import "grid.scss";
 @import "pagination.scss";
 @import "radio.scss";
