Fixes for styling issues on the Umbrella Grid.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaColumn.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaColumn.razor
@@ -2,24 +2,24 @@
 
 @if (!ScanMode && DisplayMode == UmbrellaColumnDisplayMode.Full)
 {
-	@if (IsFirstColumn)
-	{
-		@if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.Table)
-		{
-			<th scope="row" @attributes="AdditionalAttributes">
-				@if(ChildContent is not null)
+    @if (IsFirstColumn)
+    {
+        @if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.Table)
+        {
+            <th scope="row" @attributes="AdditionalAttributes">
+                @if (ChildContent is not null)
                 {
                     @ChildContent
                 }
-                else if(PropertyStringValue is not null)
+                else if (PropertyStringValue is not null)
                 {
                     @PropertyStringValue
                 }
-			</th>
-		}
+            </th>
+        }
         else if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.CollectionView)
-		{
-			<div @attributes="AdditionalAttributes">
+        {
+            <div @attributes="AdditionalAttributes">
                 @if (ChildContent is not null)
                 {
                     @ChildContent
@@ -28,14 +28,38 @@
                 {
                     @PropertyStringValue
                 }
-			</div>
-		}
-	}
-	else
-	{
-		@if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.Table)
-		{
-			<td class="@(IsActions ? "u-grid__actions" : "")" @attributes="AdditionalAttributes">
+            </div>
+        }
+    }
+    else
+    {
+        @if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.Table)
+        {
+            @if (IsActions)
+            {
+                <td class="u-grid__actions-container" @attributes="AdditionalAttributes">
+                    <div class="u-grid__actions">
+                        @ChildContent
+                    </div>
+                </td>
+            }
+            else
+            {
+                <td @attributes="AdditionalAttributes">
+                    @if (ChildContent is not null)
+                    {
+                        @ChildContent
+                    }
+                    else if (PropertyStringValue is not null)
+                    {
+                        @PropertyStringValue
+                    }
+                </td>
+            }
+        }
+        else if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.CollectionView)
+        {
+            <div @attributes="AdditionalAttributes">
                 @if (ChildContent is not null)
                 {
                     @ChildContent
@@ -44,20 +68,7 @@
                 {
                     @PropertyStringValue
                 }
-			</td>
-		}
-		else if (UmbrellaGridInstance.RenderMode is UmbrellaGridRenderMode.CollectionView)
-		{
-			<div @attributes="AdditionalAttributes">
-                @if (ChildContent is not null)
-                {
-                    @ChildContent
-                }
-                else if (PropertyStringValue is not null)
-                {
-                    @PropertyStringValue
-                }
-			</div>
-		}
-	}
+            </div>
+        }
+    }
 }
