.editorconfig changes. Updated Blazored.Modal NuGet package and fixed breaking changes.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Dialog/UmbrellaDialog.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Dialog/UmbrellaDialog.razor
@@ -1,12 +1,12 @@
 ﻿<div class="modal-backdrop fade show" @onclick="BackgroundClick"></div>
 <div class="modal fade show d-block u-dialog" tabindex="-1" role="dialog">
-	<div class="modal-dialog @(DialogSizeCssClass) @(ModalInstance.Options.Class) @(ModalInstance.Options.ContentScrollable is true ? "modal-dialog-scrollable" : "")" role="document">
+	<div class="modal-dialog @(DialogSizeCssClass) @(ModalInstance.Options.Class) modal-dialog-scrollable" role="document">
 		<div class="modal-content">
-			@if (ModalInstance.Options.HideHeader != true)
+			@if (ModalInstance.Options.HideHeader is not true)
 			{
 				<div class="modal-header">
 					<h5 class="modal-title">@ModalInstance.Title</h5>
-					@if (ModalInstance.Options.HideCloseButton != true)
+					@if (ModalInstance.Options.HideCloseButton is not true)
 					{
 						<button type="button" class="close" aria-label="Close" @onclick="CloseClick">
 							<span aria-hidden="true">&times;</span>
