--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Dialog/UmbrellaDialog.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Dialog/UmbrellaDialog.razor
@@ -1,4 +1,4 @@
-﻿<div class="modal-backdrop fade show" @onclick="BackgroundClick"></div>
+﻿<div class="modal-backdrop fade show" @onclick="BackgroundClickAsync"></div>
 <div class="modal fade show d-block u-dialog" tabindex="-1" role="dialog">
 	<div class="modal-dialog @(DialogSizeCssClass) @(ModalInstance.Options.Class) modal-dialog-scrollable" role="document">
 		<div class="modal-content">
@@ -8,7 +8,7 @@
 					<h5 class="modal-title">@ModalInstance.Title</h5>
 					@if (ModalInstance.Options.HideCloseButton is not true)
 					{
-						<button type="button" class="close" aria-label="Close" @onclick="CloseClick">
+						<button type="button" class="close" aria-label="Close" @onclick="CloseClickAsync">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					}
@@ -31,7 +31,7 @@
 					<div class="modal-footer">
 						@foreach (var button in Buttons)
 						{
-							<button type="button" class="btn btn-@(button.CssClass) @(button.FlexibleWidth ? "btn--flexible" : "")" @onclick="(e => ButtonClick(button))">@button.Text</button>
+							<button type="button" class="btn btn-@(button.CssClass) @(button.FlexibleWidth ? "btn--flexible" : "")" @onclick="(e => ButtonClickAsync(button))">@button.Text</button>
 						}
 					</div>
 				}
