Fixes TODO Changes to the FindAllShapedAsync method to allow filtering based on both entity and shaped result properties.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/FileImagePreviewUpload/UmbrellaFileImagePreviewUpload.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/FileImagePreviewUpload/UmbrellaFileImagePreviewUpload.razor
@@ -28,7 +28,7 @@
 		}
 
 		<div class="form-group">
-			<button class="btn btn-danger" type="button" @onclick="DeleteImageClickAsync">Delete</button>
+			<button class="btn btn-danger" type="button" @onclick="DeleteImageClickAsync">@DeleteButtonText</button>
 		</div>
 	}
 </div>
