--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/Grid/UmbrellaGrid.razor
@@ -164,20 +164,34 @@
                                     }
                                     @if (ShowRadioSelectColumn)
                                     {
-                                        string id = Guid.NewGuid().ToString("N");
+                                        @if (item is not null)
+                                        {
+                                            string id = Guid.NewGuid().ToString("N");
 
-                                        <th class="u-grid__item-radio">
-                                            <div class="u-radio">
-                                                <input type="radio" id="@id" name="@groupName" checked="@(SelectedRow?.Equals(item))" @onchange="(() => SelectedRow = item)" class="u-radio__input" />
-                                                <label class="u-radio__label" for="@id">
-                                                    <span class="sr-only">@item?.ToString()</span>
-                                                </label>
-                                            </div>
-                                        </th>
+                                            <th class="u-grid__item-radio">
+                                                <div class="u-radio">
+                                                    <input type="radio" id="@id" name="@groupName" checked="@(SelectedRow?.Equals(item))" @onchange="(() => SelectedRow = item)" class="u-radio__input" />
+                                                    <label class="u-radio__label" for="@id">
+                                                        <span class="sr-only">@item?.ToString()</span>
+                                                    </label>
+                                                </div>
+                                            </th>
+                                        }
+                                        else
+                                        {
+                                            <!-- Rendering error: item is null -->
+                                        }
                                     }
-                                    <CascadingValue Value="item">
-                                        @Columns?.Invoke(item)
-                                    </CascadingValue>
+                                    @if (item is not null)
+                                    {
+                                        <CascadingValue Value="item">
+                                            @Columns?.Invoke(item)
+                                        </CascadingValue>
+                                    }
+                                    else
+                                    {
+                                        <!-- Rendering error: item is null -->
+                                    }
                                 </tr>
                             }
                         </tbody>
