Nullability fixes Updated version to 6.0.0-preview-0106

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/ModelLayoutStateView/UmbrellaModelLayoutStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/ModelLayoutStateView/UmbrellaModelLayoutStateView.razor
@@ -13,7 +13,7 @@
 }
 else if (CurrentState is LayoutState.Success && Model is not null)
 {
-    @Success?.Invoke(Model)
+    @Success
 }
 else if (CurrentState is LayoutState.Error)
 {
