--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Components/StateViews/ErrorStateView.razor
@@ -1,5 +1,13 @@
 ﻿<div class="u-state-view u-state-view--error">
-	<p>@Message</p>
+    @if (ChildContent is not null)
+    {
+        @ChildContent
+    }
+    else
+    {
+        <p>@Message</p>
+    }
+
 	@if (OnReloadButtonClick.HasDelegate && ShowReloadButton)
 	{
 		<button class="btn btn-primary" @onclick="async () => await OnReloadButtonClick.InvokeAsync(null)">@ReloadButtonText</button>
